--- a/Coding/magic-wand/styles.css
+++ b/Coding/magic-wand/styles.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --text: #1b0912;
-  --background: #fdf7fa;
-  --primary: #d37373;
-  --secondary: #e7ccb1;
-  --accent: #9b6631;
+  --text: #e2e9e7;
+  --background: #101413;
+  --primary: #5e7178;
+  --secondary: #14151a;
+  --accent: #6e758c;
+  
+  
 }
 
 * {
@@ -37,12 +39,13 @@ body, html {
   width: 80%;
   height: 60%;
   overflow: hidden;
-  background-color: var(--secondary);
+  background-color: var(--primary);
 
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
+  box-shadow: 0 0 10px var(--primary);
 }
 
 .wand-tip {
@@ -58,7 +61,6 @@ body, html {
   position: absolute;
   overflow: hidden;
   border-radius: 20px;
-  transition: transform 1s ease;
   z-index: 101;
 }
 
@@ -75,7 +77,7 @@ body, html {
   height: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.01);
-  backdrop-filter: blur(30%);
+  backdrop-filter: blur(6px);
   border-radius: 40px;
   z-index: 100;
 }
