--- a/Coding/magic-wand/styles.css
+++ b/Coding/magic-wand/styles.css
@@ -36,8 +36,8 @@ body, html {
 }
 
 .window {
-  width: 80%;
-  height: 60%;
+  width: 50%;
+  aspect-ratio: 16 / 9;
   overflow: hidden;
   background-color: var(--primary);
 
@@ -46,12 +46,14 @@ body, html {
   justify-content: center;
   border-radius: 20px;
   box-shadow: 0 0 10px var(--primary);
+  position: relative;
 }
 
 .wand-tip {
   width: 50px;
   aspect-ratio: 13/16;
   background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 50%, rgba(245,245,245,1) 100%);
+  position: absolute;
 }
 
 .wand {
