--- a/Coding/magic-wand/styles.css
+++ b/Coding/magic-wand/styles.css
@@ -7,7 +7,6 @@
   --secondary: #14151a;
   --accent: #6e758c;
   
-  
 }
 
 * {
@@ -36,7 +35,7 @@ body, html {
 }
 
 .window {
-  width: 50%;
+  width: 70%;
   aspect-ratio: 16 / 9;
   overflow: hidden;
   background-color: var(--primary);
@@ -72,25 +71,27 @@ body, html {
   position: relative;
   width: 100%;
   height: 100%;
-
   overflow: hidden;
 }
 
-.blur {
+.blur1, .blur2, .blur3, .blur4, .blur5 {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.01);
+  background-color: rgba(53, 53, 53, 0.5);
   backdrop-filter: blur(6px);
-  border-radius: 40px;
   z-index: 100;
+
+  display: flex;
+  padding: 40%;
 }
+
 
 .item {
   background-color: white;
-  width: 15%;
-  aspect-ratio: 1 / 1;
-  border-radius: 10px;
+  width: 18%;
+  aspect-ratio: 1/1;
   transform: translateY(-50%);
   position: absolute;
   box-shadow: 0 0 10px rgb(255, 255, 255, 0.5);
@@ -99,9 +100,10 @@ body, html {
 }
 
 .item .img {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .item img {
@@ -114,7 +116,7 @@ body, html {
 
 .i2 {
   top: 36%;
-  left: 16%;
+  left: 15%;
   transform: rotate(-10deg);
 }
 
@@ -126,18 +128,18 @@ body, html {
 
 .i4 {
   top: 31%;
-  left: 44%;
+  left: 45%;
   transform: rotate(15deg);
 }
 
 .i5 {
   top: 40%;
-  left: 58%;
+  left: 60%;
   transform: rotate(5deg);
 }
 
 .i6 {
   top: 40%;
-  left: 72%;
-  transform: rotate(-11deg);
+  left: 75%;
+  transform: rotate(-10deg);
 }
